[package]
name = "axum-dyn-error"
version = "0.0.0"
edition = "2021"
description = "Dynamic error logging for Axum"
license = "MIT"
keywords = ["Errors", "Axum", "Logging"]
authors = ["Jacobtread <jacobtread@gmail.com>"]

[dependencies]
axum-core = "0.3"
anyhow = { version = "1", optional = true }
log = { version = "0.4", optional = true }
http = "0.2.11"

[features]
default = ["log"]
# Support for anyhow errors
anyhow = ["dep:anyhow"]
# Whether anyhow errors should hide the display messages
hide-anyhow = []
# Log HTTP errors using `log`
log = ["dep:log"]
